--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,7 @@
     <string name="title_activity_results">ResultsActivity</string>
     <string name="action_settings">Settings</string>
     <string name="section_format">Hello World from section: %1$d</string>
+    <string name="barcode_scanner">Barcode Scanner</string>
+    <string name="book_history">Search History</string>
+    <string name="favorites_nav">Favorites</string>
 </resources>
