--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,7 @@
     <string name="book_history">Search History</string>
     <string name="favorites_nav">Favorites</string>
     <string name="home">Home</string>
+    <string name="history">History</string>
+    <string name="favorites">Favorites</string>
+    <string name="barcode">Scan Book</string>
 </resources>
