Started Search activity & Added to navDrawer

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,5 @@
     <string name="history">History</string>
     <string name="favorites">Favorites</string>
     <string name="barcode">Scan Book</string>
+    <string name="title_search">Search By Title</string>
 </resources>
