--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,5 @@
     <string name="favorites">Favorites</string>
     <string name="barcode">Scan Book</string>
     <string name="title_search">Search By Title</string>
+    <string name="title_search_btn">Search For Book</string>
 </resources>
